trunk/Archive2/ce/248c6ed357fcc9/output
main.cpp: In function 'int main()':
main.cpp:9:18: error: 'SAD' was not declared in this scope
     std::cout << SAD;
                  ^
